Alignment fixes

--- a/css/essence20.css
+++ b/css/essence20.css
@@ -995,11 +995,6 @@ form .hint {
   color: white;
 }
 
-.essence20 .spec-label {
-  font-size: 1.25em;
-  color: white;
-}
-
 .essence20 .skill-mod-label {
   color: white;
 }
